crates/parser/src/tests/snapshots/func_def_redefine_fn.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "\nfn foo() {}\nfn bar() {}\nfn foo() {}\n"
- Err:
    message: "Function `foo` can't be redefined"
    line: 4
    column: 1
- "Function `foo` can't be redefined at 4:1"

