crates/parser/src/tests/snapshots/if_then.snap
---
source: crates/parser/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "if a > b { foo }"
- Ok:
    nodes:
      - node:
          Cond:
            cond_expr:
              node:
                BinOp:
                  op: Gt
                  lhs:
                    node:
                      Ident:
                        name: a
                  rhs:
                    node:
                      Ident:
                        name: b
            then_block:
              node:
                Block:
                  list:
                    - node:
                        Ident:
                          name: foo
            else_block: ~
- "(if (> a b) '(foo))"

