crates/parser/src/tests/snapshots/if_then_else_if.snap
---
source: crates/parser/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "\nif a > b {\n    foo\n} else if c < a {\n    bar\n}\n"
- Ok:
    nodes:
      - node:
          Cond:
            cond_expr:
              node:
                BinOp:
                  op: Gt
                  lhs:
                    node:
                      Ident:
                        name: a
                  rhs:
                    node:
                      Ident:
                        name: b
            then_block:
              node:
                Block:
                  list:
                    - node:
                        Ident:
                          name: foo
            else_block:
              node:
                Block:
                  list:
                    - node:
                        Cond:
                          cond_expr:
                            node:
                              BinOp:
                                op: Lt
                                lhs:
                                  node:
                                    Ident:
                                      name: c
                                rhs:
                                  node:
                                    Ident:
                                      name: a
                          then_block:
                            node:
                              Block:
                                list:
                                  - node:
                                      Ident:
                                        name: bar
                          else_block: ~
- "(if (> a b) '(foo) '((if (< c a) '(bar))))"

