crates/parser/src/tests/snapshots/let_bad_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 214
expression: "(test[1], ast, ast_string)"
---
- "let x: int ="
- Err:
    message: Premature end of expression
    line: 0
    column: 0
- "Parsing error: Premature end of expression"

