crates/parser/src/tests/snapshots/let_bad_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 214
expression: "(test[1], ast, ast_string)"
---
- "let x: int"
- Ok:
    nodes:
      - Stmt:
          Let:
            name: x
            antn: Int32
            init: ~
- "(let x:int32)"

