crates/parser/src/tests/snapshots/let_bad_4.snap
---
source: crates/parser/src/tests.rs
assertion_line: 225
expression: "(test[1], ast, ast_string)"
---
- let x
- Err:
    message: "Expecting `:` after identifier in `let` typed declaration. Got `EOF`"
    line: 0
    column: 0
- "Expecting `:` after identifier in `let` typed declaration. Got `EOF`"

