crates/parser/src/tests/snapshots/logical_ops_eq.snap
---
source: crates/parser/src/tests.rs
assertion_line: 228
expression: "(test[1], ast, ast_string)"
---
- x == 1
- Ok:
    nodes:
      - Expr:
          BinOp:
            op: Eq
            lhs:
              Expr:
                Ident:
                  name: x
                  ty: ~
            rhs:
              Expr:
                Lit:
                  value:
                    UInt64: 1
                  ty: ~
            ty: ~
- (== x 1)

