crates/parser/src/tests/snapshots/logical_ops_or.snap
---
source: crates/parser/src/tests.rs
assertion_line: 237
expression: "(test[1], ast, ast_string)"
---
- x || 1
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Or
            lhs:
              kind:
                Ident:
                  name: x
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 1
- (|| x 1)

